# Shell

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
core/: cmd.cpp  cmd.h  cmd.hpp
doc/: cd  exit  find  grep  help  ls  sed
tools/check/: check.cpp  check.h
tools/copy_array/: copy_array.cpp  copy_array.h
tools/input/: read.cpp  read.h  tab.cpp  tab.h
tools/parse/: parseCommand.cpp  parseCommand.h  parseScript.cpp  parseScript.h
tools/path/: path.cpp  path.h  pathConvert.cpp  pathConvert.h
tools/trim/: trim.cpp  trim.h
